--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <div class="card-white" id="introduction">
         <h1>Hello, I'm Louanne.</h1>
-        <img src="images/profile.jpg" class="img-circle" width="100px" alt="Louanne PLANQUE">
+        <img src="profile.jpg" class="img-circle" width="100px" alt="Louanne PLANQUE">
         <p>
           I'm Louanne and I'm a student at IESEG school. I love music and I'm a dancer since 2015.
         </p>
