--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p>
           I'm Louanne and I'm a student at IESEG school. I love music and I'm a dancer since 2015.
         </p>
-        <a href="https://www.google.fr" target="_blank" class="btn-blue">Link to Google</a>
+        <a href="https://learn.lewagon.com/dashboard" target="_blank" class="btn-blue">Link to My Wagon</a>
       </div>
       <div class="card-white">
         <h2>Music</h2>
